@@ -1,3 +1,8 @@
+* multi_type_vector
+
+  * fixed a bug in set_empty() where emptying a whole block would fail
+    to merge its adjacent block(s) even when they are also empty.
+
 mdds 0.7.0
 
 * multi_type_vector
